modify instructions modal text and styling

--- a/levelselection.html
+++ b/levelselection.html
@@ -102,9 +102,11 @@
               <li>
                 Select two tiles. <br />
                 If the two tiles match, they will be removed from the board. <br />
-                If they don't, they will be flipped back. <br />
-                Rinse and repeat until the board is clear. <br />
-                When the board is clear, the game is completed. 
+                If they don't, they will be flipped back.
+              </li>
+              <li>
+                Repeat Step 3 until the board is clear. <br />
+                When the board is clear, the game is completed.
               </li>
               <li>
                 During a game, you can click "Restart" at any time to restart the game with the same difficulty level. 
