--- a/index.html
+++ b/index.html
@@ -69,8 +69,10 @@
               <li>
                 Select two tiles. <br />
                 If the two tiles match, they will be removed from the board. <br />
-                If they don't, they will be flipped back. <br />
-                Rinse and repeat until the board is clear. <br />
+                If they don't, they will be flipped back.
+              </li>
+              <li>
+                Repeat Step 3 until the board is clear. <br />
                 When the board is clear, the game is completed. <br />
               </li>
               <li>
