--- a/levelselection.html
+++ b/levelselection.html
@@ -40,6 +40,7 @@
           <h2>Select difficulty level</h2>
         </div>
         <div class="buttonWrapper">
+          <!-- Button code (including CSS) obtained from W3Schools -->
           <div class="levelButton">
             <div class="levelButtonContainer">
               <div class="levelButtonFront">
