add target-blank to footer link on all pages

--- a/gameplay.html
+++ b/gameplay.html
@@ -103,7 +103,7 @@
     <!-- /.Modal -->
     <footer>
       <div class="footerBar">
-        &copy; 2020 by <a href="https://github.com/bravoalpha79">bravoalpha79</a> for educational purposes.
+        &copy; 2020 by <a href="https://github.com/bravoalpha79" target="_blank">bravoalpha79</a> for educational purposes.
       </div>
     </footer>
 
