--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     <!-- /.Modal -->
     <footer>
       <div class="footerBar">
-        &copy; 2020 by <a href="https://github.com/bravoalpha79">bravoalpha79</a> for educational purposes.
+        &copy; 2020 by <a href="https://github.com/bravoalpha79" target="_blank">bravoalpha79</a> for educational purposes.
       </div>
     </footer>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
